see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

19-Nov-2011 Christophe Demko
 # [#27118] *Login Module redirects issue with multilanguage

18-Nov-2011 Christophe Demko
 # [#27190] When Global Cache enabled, sub menus don't expand

17-Nov-2011 Christophe Demko
 ^ Rename libraries/joomlacms by libraries/cms
 # [#27163] Inaccurate language string for empty Introtext (Denise McLaurin)

17-Nov-2011 Jean-Marie Simonet
 # [#26821] Plug-in Manager problem mixing pagination and filter. Thanks Prasit.
 # [#27189] Spelling mistake in com_menu, function name incorrect. Thanks Ryan.
 + Adding Syriac flag sy.gif to mod_languages. Thanks Pauls.

15-Nov-2011 Jean-Marie Simonet
 $ Correcting typo in ini file

14-Nov-2011 Jean-Marie Simonet
 Remove install checks

-------------------- 1.7.3 Stable Release [14-Nov-2011] ------------------

12-Nov-2011 Mark Dexter
 # Revert [#26805] because it breaks modal close behavior in front end (issue 27149)

11-Nov-2011 Jean-Marie Simonet
 # [#26993] Weblinks entries do not delete correctly and display in the weblinks view. Thanks Denise.

10-Nov-2011 Christophe Demko
 #- [#27119] Remove unused title_alias column

09-Nov-2011 Mark Dexter
 # [#26439] Editors have problems with quotes in content plugins syntax

09-Nov-2011 Christophe Demko
 # [#27129] *Patch #26980 breaks menu item saving
 # [#26805] Update MooTools to version 1.4.1
 # [#27128] *Validation error in mod_languages (Jean-Marie Simonet)

09-Nov-2011 Jean-Marie Simonet
 # [#26830] xreference in 1.6+ is inconsistent with 1.5.  Thanks Elin and Andrea
 # [#27129] *Patch #26980 breaks menu item saving. Thanks Christophe.

08-Nov-2011 Mark Dexter