@@ -9,4 +9,4 @@ PLG_CONTENT_JOOMLA_FIELD_CHECK_CATEGORIES_DESC="Check that categories are fully 
 PLG_CONTENT_JOOMLA_FIELD_CHECK_CATEGORIES_LABEL="Check category deletion"
 PLG_CONTENT_JOOMLA_FIELD_EMAIL_NEW_FE_DESC="Email users where 'Send email' is on when there is a new article submitted via the frontend site."
 PLG_CONTENT_JOOMLA_FIELD_EMAIL_NEW_FE_LABEL="Email on new site article"
-PLG_CONTENT_JOOMLA_XML_DESCRIPTION="Does category processing for core extensions; send email when new article is submitted in the frontend."
+PLG_CONTENT_JOOMLA_XML_DESCRIPTION="Does category processing for core extensions; sends an email when new article is submitted in the frontend."
