@@ -42,7 +42,7 @@ INSTL_DATABASE_OLD_PROCESS_DESC="Any existing backup tables from former Joomla! 
 INSTL_DATABASE_OLD_PROCESS_LABEL="Old Database Process"
 INSTL_DATABASE_PASSWORD_DESC="For site security using a password for the mysql account is mandatory"
 INSTL_DATABASE_PASSWORD_LABEL="Password"
-INSTL_DATABASE_PREFIX_DESC="Choose a table prefix or use the <b>randomly generated</b>. Ideally, three or four characters long, contain only alphanumeric characters, and MUST end in an underscore."
+INSTL_DATABASE_PREFIX_DESC="Choose a table prefix or use the <b>randomly generated</b>. Ideally, three or four characters long, contain only alphanumeric characters, and MUST end in an underscore. <b>Make sure that the prefix chosen is not used by other tables</b>."
 INSTL_DATABASE_PREFIX_LABEL="Table Prefix"
 INSTL_DATABASE_PREFIX_MSG="The table prefix must start with a letter, be followed by optional alphanumeric characters and by an underscore"
 INSTL_DATABASE_TYPE_DESC="This is probably &quot;MySQLi&quot;"
