@@ -9,7 +9,7 @@ MOD_ARTICLES_CATEGORY_FIELD_ARTICLEGROUPING_DESC="Select how you would like the 
 MOD_ARTICLES_CATEGORY_FIELD_ARTICLEGROUPING_LABEL="Article Grouping"
 MOD_ARTICLES_CATEGORY_FIELD_ARTICLEGROUPINGDIR_DESC="Select the direction you would like the Article Groupings to be ordered by."
 MOD_ARTICLES_CATEGORY_FIELD_ARTICLEGROUPINGDIR_LABEL="Grouping Direction"
-MOD_ARTICLES_CATEGORY_FIELD_ARTICLEORDERING_DESC="Select which field you would like Articles to be ordered by. Featured Ordering should only be used when Ordering Option for Featured Articles is set to 'Only'."
+MOD_ARTICLES_CATEGORY_FIELD_ARTICLEORDERING_DESC="Select which field you would like Articles to be ordered by. Featured Ordering should only be used when Filtering Option for Featured Articles is set to 'Only'."
 MOD_ARTICLES_CATEGORY_FIELD_ARTICLEORDERING_LABEL="Article Field to Order By"
 MOD_ARTICLES_CATEGORY_FIELD_ARTICLEORDERINGDIR_DESC="Select the direction you would like Articles to be ordered by."
 MOD_ARTICLES_CATEGORY_FIELD_ARTICLEORDERINGDIR_LABEL="Ordering Direction"
